--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "resend": "^6.9.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5",
     "zod": "^4.3.6"
